# document_network_viewer

./: .env.sample  .gitignore  CLAUDE.md  README.md  TODO.md  app.py  config.yaml  preprocess.py  pyproject.toml
docs/: semantic-distance-comparison.py
static/: index.html  main.js  style.css
tests/: test_index.py
