[project]
name = "document-network-viewer"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "markdown>=3.10.2",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# Use CPU-only PyTorch wheels to avoid downloading multi-GB CUDA packages.
# sentence-transformers only needs CPU inference for embedding generation.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
